# Deterministic-agent-execution-engine-for-agenticIDEs

./: .env.example  .gitignore  README.md  Smart_Model_Router_Knowledge_Base.xml  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1de8abad95f1_create_agent_tables.py  71188cf54d80_create_agent_runs_and_steps_tables.py
scripts/: clear_alembic.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  routes.py  schemas.py
src/db/: __init__.py  models.py  session.py
src/engine/: __init__.py  engine.py
src/executors/: __init__.py  analyze.py  base.py  edit_file.py  read_file.py  run_command.py  summarize.py
src/services/: __init__.py  planner.py  smart_router.py  workspace.py
workspace/: test_file.py
