[project]
name = "deterministic-agent-engine"
version = "0.1.0"
description = "Deterministic Agent Execution Engine - A production-ready execution layer for agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Asirwad Sali" }]

dependencies = [
    # ===================
    # FastAPI & Web Server
    # ===================
    "fastapi[standard]>=0.115.0", # Async web framework with OpenAPI
    "uvicorn[standard]>=0.32.0",  # ASGI server

    # ===================
    # Database (Async PostgreSQL)
    # ===================
    "sqlalchemy[asyncio]>=2.0.0", # ORM with async support
    "asyncpg>=0.30.0",            # Fastest async PostgreSQL driver
    "alembic>=1.14.0",            # Database migrations

    # ===================
    # HTTP Client (for Smart Model Router)
    # ===================
    "httpx>=0.28.0", # Async HTTP client

    # ===================
    # Configuration & Validation
    # ===================
    "pydantic>=2.10.0",         # Data validation
    "pydantic-settings>=2.6.0", # Settings from environment
    "python-dotenv>=1.0.1",     # Load .env files
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",            # Fast Python linter
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ===================
# Ruff Linter Configuration
# ===================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"] # Error, pyflakes, isort, pyupgrade, bugbear
ignore = ["E501"]                   # Line too long (we handle manually)

# ===================
# Pytest Configuration
# ===================
[tool.pytest.ini_options]
asyncio_mode = "auto" # Auto-detect async tests
testpaths = ["tests"]
